# Tubitak_NIDS_Project

./: .gitignore  notes.txt  requirements.txt
configs/: ml_rules.rules  snort_community.lua  snort_test.lua
models/: best_lstm_model.tflite  fine_tuned_lstm_model.tflite
plugins/ml_inspector/: CMakeLists.txt  build.sh  ml_inspector_snippet.lua
plugins/ml_inspector/src/: flow_tracker.h  ml_inspector.cc
scripts/: build_confusion_matrix_lstm.py  community_flowid_confusion.py  convert_to_tflite.py  gen_test_pcap.py  lstm_flowid_confusion.py  run_community_replay.sh  run_lstm_replay.sh  run_xgb_replay.sh  setup_xgboost.sh  test.py  test2.py  verify_xgb_model.py  xgb_flowid_confusion.py
src/data_prep/: export_scaler.py  load_traindataset.py  prepare_lstmdataset.py  prepare_lstmdataset_test.py
src/evaluate/: calculate.py  evaluate_lstm.py  evaluate_xgboost.py  optimize_lstm_threshold.py  test.py  test_cicids2017.py
src/snort_utils/: build_flowid.py  fix_flowid.py  load_alerts.py  load_dataset.py  parse_alerts.py  prepare_dataset.py
src/train/: fine_tune_lstm.py  fine_tune_xgboost.py  h5to.py  train_lstm.py  train_xgboost.py
